--- a/css/style.css
+++ b/css/style.css
@@ -26,75 +26,73 @@ html, body {
         z-index: -1;
         transition: .15s all ease-in-out;
       }
-      input {
+input {
     padding: 4px 12px;
     color: rgba(0, 0, 0, 0.7);
     border: 1px solid rgba(0, 0, 0, 0.12);
     transition: 0.15s all ease-in-out;
     background: white;
-    &:focus {
+}
+/*    :focus {
       outline: none;
       transform: scale(1.05);
-      & + label {
+        label {
         font-size: 10px;
         transform: translateY(-24px) translateX(-12px);
       }
     }
-    &::-webkit-input-placeholder {
+*/
+webkit-input-placeholder {
       font-size: 12px;
       color: rgba(0, 0, 0, 0.5);
       font-weight: 100;
     }
-  }
-  
-    }
-  
-    .wrapper {
+
+.wrapper {
       display: flex;
       max-width: 444px;
       flex-wrap: wrap;
       padding-top: 12px;
     }
   
-    .card {
+.card {
       box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
       max-width: 124px;
       margin: 12px;
       transition: .15s all ease-in-out;
-      &:hover {
+    }
+.hover {
         transform: scale(1.1);
-      }
-      a {
-        text-decoration: none;
-        padding: 12px;
-        color: #03A9F4;
-        font-size: 24px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        img {
-          height: 100px;
-        }
-        small {
+    }
+a {
+    text-decoration: none;
+    padding: 12px;
+    color: #03A9F4;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+img {
+    height: 100px;
+}
+
+small {
           font-size: 10px;
           padding: 4px;
-        }
-      }
-    }
+}
   
-  
-  
-    .hotpink {
+    
+.hotpink {
       background: hotpink;
     }
   
-    .green {
+.green {
       background: green;
     }
   
-    .box {
+.box {
       width: 100px;
       height: 100px;
       border: 1px solid rgba(0,0,0,.12);
-    }
-  }
+}
