--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
     <!--VueJS CDN-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
             <div class="card" v-for="post in filteredList">
                 <a v-bind:href="post.link" target="_blank">
                     <img v-bind:src="post.img" />
-                    <small>posted by:{{ post.author }}</small>
-                    {{post.title}}
+                    <small>posted by:[[ post.author ]]</small>
+                    [[ post.title ]]
                 </a>
             </div>
         </div>
@@ -38,10 +38,11 @@
 
         const app = new Vue({
             el: '#app',
+            delimiters: ['[[',']]'],
             data: {
                 search: '',
                 postList: [
-                    new Post(
+                    /*new Post(
                         'Vue.js',
                         'https://vuejs.org/',
                         'Chris',
@@ -95,7 +96,14 @@
                         'Chuck',
                         'https://cdn.worldvectorlogo.com/logos/feathersjs.svg'
                     ),
-                ]
+                */]
+            },
+            mounted(){
+              fetch("http://127.0.0.1:5000/search/" + search)
+                .then(response => response.json())
+                .then((data) => {
+                  this.postList = data;
+                })
             },
             computed: {
                 filteredList() {
